feat: create new endpoint to get equipos with observaciones pendientes
